added demographics (for Studies 1, 2 and Generalization dataset 2; the other generalization datasets are described in their corresponding papers).

--- a/ANALYSIS/Generalization_Dataset_2/GeneralizationDataset2_analysis.ipynb
+++ b/ANALYSIS/Generalization_Dataset_2/GeneralizationDataset2_analysis.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f7989bb4",
    "metadata": {},
    "outputs": [],
@@ -74,6 +74,7 @@
     "IPI_df = pd.read_csv('IPI_data_GD2.csv')\n",
     "main_data_df = IPI_df.copy()\n",
     "df = pd.read_csv(filename)\n",
+    "demographic_data = pd.read_csv('demographic_data_GD2.csv')\n",
     "\n",
     "Block_Time = 45 # each block is 45 seconds\n",
     "agg_dict = {\n",
@@ -1412,6 +1413,223 @@
     "print(f\"Pearson correlation for end_of_training_pred with habit_level: {pearson_corr:.3f}, p-value: {pearson_p:.4f}\")\n",
     "spearman_corr, spearman_p = spearmanr(only_after_devalued_data['end_of_training_pred'], only_after_devalued_data['habit_level'], alternative='greater')\n",
     "print(f\"Spearman correlation for end_of_training_pred with habit_level: {spearman_corr:.3f}, p-value: {spearman_p:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4daa0595",
+   "metadata": {},
+   "source": [
+    "# Demographics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4a0a0934",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "subID",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "2566ebb1-63d9-4b3d-9ac8-34c5e310e4c7",
+       "rows": [
+        [
+         "count",
+         "164.0",
+         "164.0"
+        ],
+        [
+         "mean",
+         "159.83536585365854",
+         "32.957317073170735"
+        ],
+        [
+         "std",
+         "85.53736868158632",
+         "11.231720314537805"
+        ],
+        [
+         "min",
+         "2.0",
+         "18.0"
+        ],
+        [
+         "25%",
+         "90.75",
+         "26.0"
+        ],
+        [
+         "50%",
+         "161.0",
+         "30.5"
+        ],
+        [
+         "75%",
+         "233.25",
+         "37.0"
+        ],
+        [
+         "max",
+         "311.0",
+         "72.0"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subID</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>164.000000</td>\n",
+       "      <td>164.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>159.835366</td>\n",
+       "      <td>32.957317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>85.537369</td>\n",
+       "      <td>11.231720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>90.750000</td>\n",
+       "      <td>26.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>161.000000</td>\n",
+       "      <td>30.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>233.250000</td>\n",
+       "      <td>37.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>311.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            subID         age\n",
+       "count  164.000000  164.000000\n",
+       "mean   159.835366   32.957317\n",
+       "std     85.537369   11.231720\n",
+       "min      2.000000   18.000000\n",
+       "25%     90.750000   26.000000\n",
+       "50%    161.000000   30.500000\n",
+       "75%    233.250000   37.000000\n",
+       "max    311.000000   72.000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "gender",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "e1eccdfd-8cd0-42f5-8f3a-9c9eb93e6bb9",
+       "rows": [
+        [
+         "Male",
+         "85"
+        ],
+        [
+         "Female",
+         "74"
+        ],
+        [
+         "Non-specific",
+         "5"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "gender\n",
+       "Male            85\n",
+       "Female          74\n",
+       "Non-specific     5\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(demographic_data.describe())\n",
+    "display(demographic_data.gender.value_counts())"
    ]
   }
  ],
