--- a/ANALYSIS/Study2_analysis.ipynb
+++ b/ANALYSIS/Study2_analysis.ipynb
@@ -17,26 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext rpy2.ipython\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/rpy2/robjects/pandas2ri.py:368: DeprecationWarning: The global conversion available with activate() is deprecated and will be removed in the next major release. Use a local converter.\n",
-      "  warnings.warn('The global conversion available with activate() '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "import pandas as pd\n",
@@ -70,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h_/4yn2bj6118x8bmpj49gssb440000gn/T/ipykernel_2341/2627051751.py:85: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'before' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h_/4yn2bj6118x8bmpj49gssb440000gn/T/ipykernel_34511/3930289685.py:87: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'before' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  main_data_df.loc[main_data_df['phase'] == 'pre_test', 'time'] = 'before'\n"
      ]
     }
@@ -87,10 +70,12 @@
     "main_data_df = pd.read_pickle('parsed_data/main_data_df_SAMPLE2.pkl')\n",
     "CT_data = pd.read_pickle('parsed_data/CT_data_SAMPLE2.pkl')\n",
     "gambles = pd.read_pickle('parsed_data/gambles_SAMPLE2.pkl')\n",
+    "demographic_data = pd.read_csv('parsed_data/demographic_data_STUDY2.csv')\n",
     "\n",
     "main_data_df = main_data_df.reset_index(drop=True)\n",
     "CT_data = CT_data.reset_index(drop=True)\n",
     "gambles = gambles.reset_index(drop=True)\n",
+    "demographic_data = demographic_data.reset_index(drop=True)\n",
     "\n",
     "# Helper functions for IPI calculations:\n",
     "# -----------------------------\n",
@@ -184,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -503,11 +488,13 @@
     "CT_data = CT_data[~CT_data['sub'].isin(PRE_REG_EXCLUSIONS_LIST)]\n",
     "gambles = gambles[~gambles['sub'].isin(PRE_REG_EXCLUSIONS_LIST)]\n",
     "IPI_consistency_data_by_trial = IPI_consistency_data_by_trial[~IPI_consistency_data_by_trial['sub'].isin(PRE_REG_EXCLUSIONS_LIST)]\n",
+    "demographic_data = demographic_data[~demographic_data['sub'].isin(PRE_REG_EXCLUSIONS_LIST)]\n",
     "\n",
     "main_data_df = main_data_df.reset_index(drop=True)\n",
     "CT_data = CT_data.reset_index(drop=True)\n",
     "gambles = gambles.reset_index(drop=True)\n",
-    "IPI_consistency_data_by_trial = IPI_consistency_data_by_trial.reset_index(drop=True)\n"
+    "IPI_consistency_data_by_trial = IPI_consistency_data_by_trial.reset_index(drop=True)\n",
+    "demographic_data = demographic_data.reset_index(drop=True)"
    ]
   },
   {
@@ -9517,6 +9504,216 @@
     "plt.ylabel('# Devalued sequences completed')\n",
     "plt.xlabel('End of training Seq completion time FromStart STD')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demographics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "sub",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "55c980ac-8e7b-4742-863b-d4fad18b3ab6",
+       "rows": [
+        [
+         "count",
+         "258.0",
+         "258.0"
+        ],
+        [
+         "mean",
+         "5150.934108527132",
+         "37.86046511627907"
+        ],
+        [
+         "std",
+         "87.81005942579539",
+         "11.781568528055535"
+        ],
+        [
+         "min",
+         "5001.0",
+         "19.0"
+        ],
+        [
+         "25%",
+         "5074.25",
+         "29.0"
+        ],
+        [
+         "50%",
+         "5150.5",
+         "35.0"
+        ],
+        [
+         "75%",
+         "5226.75",
+         "45.0"
+        ],
+        [
+         "max",
+         "5302.0",
+         "80.0"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>258.000000</td>\n",
+       "      <td>258.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5150.934109</td>\n",
+       "      <td>37.860465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>87.810059</td>\n",
+       "      <td>11.781569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>5001.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5074.250000</td>\n",
+       "      <td>29.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5150.500000</td>\n",
+       "      <td>35.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5226.750000</td>\n",
+       "      <td>45.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>5302.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sub         age\n",
+       "count   258.000000  258.000000\n",
+       "mean   5150.934109   37.860465\n",
+       "std      87.810059   11.781569\n",
+       "min    5001.000000   19.000000\n",
+       "25%    5074.250000   29.000000\n",
+       "50%    5150.500000   35.000000\n",
+       "75%    5226.750000   45.000000\n",
+       "max    5302.000000   80.000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "gender",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "1458058c-19e8-40b5-bfde-cb4c8ee516a1",
+       "rows": [
+        [
+         "Female",
+         "129"
+        ],
+        [
+         "Male",
+         "129"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 2
+       }
+      },
+      "text/plain": [
+       "gender\n",
+       "Female    129\n",
+       "Male      129\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(demographic_data.describe())\n",
+    "display(demographic_data.gender.value_counts())"
    ]
   }
  ],
