--- a/ANALYSIS/Study1_analysis.ipynb
+++ b/ANALYSIS/Study1_analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -26,14 +26,6 @@
      "text": [
       "The rpy2.ipython extension is already loaded. To reload it, use:\n",
       "  %reload_ext rpy2.ipython\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/rpy2/robjects/pandas2ri.py:368: DeprecationWarning: The global conversion available with activate() is deprecated and will be removed in the next major release. Use a local converter.\n",
-      "  warnings.warn('The global conversion available with activate() '\n"
      ]
     }
    ],
@@ -74,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h_/4yn2bj6118x8bmpj49gssb440000gn/T/ipykernel_2297/3197255455.py:86: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'before' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h_/4yn2bj6118x8bmpj49gssb440000gn/T/ipykernel_34341/3709487339.py:88: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'before' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  main_data_df.loc[main_data_df['phase'] == 'pre_test', 'time'] = 'before'\n"
      ]
     }
@@ -91,10 +83,12 @@
     "main_data_df = pd.read_pickle('parsed_data/main_data_df.pkl')\n",
     "CT_data = pd.read_pickle('parsed_data/CT_data.pkl')\n",
     "gambles = pd.read_pickle('parsed_data/gambles.pkl')\n",
+    "demographic_data = pd.read_csv('parsed_data/demographic_data_STUDY1.csv')\n",
     "\n",
     "main_data_df = main_data_df.reset_index(drop=True)\n",
     "CT_data = CT_data.reset_index(drop=True)\n",
     "gambles = gambles.reset_index(drop=True)\n",
+    "demographic_data = demographic_data.reset_index(drop=True)\n",
     "\n",
     "# Helper functions for IPI calculations:\n",
     "# -----------------------------\n",
@@ -189,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -492,11 +486,13 @@
     "CT_data = CT_data[~CT_data['sub'].isin(PRE_REG_EXCLUSIONS_LIST)]\n",
     "gambles = gambles[~gambles['sub'].isin(PRE_REG_EXCLUSIONS_LIST)]\n",
     "IPI_consistency_data_by_trial = IPI_consistency_data_by_trial[~IPI_consistency_data_by_trial['sub'].isin(PRE_REG_EXCLUSIONS_LIST)]\n",
+    "demographic_data = demographic_data[~demographic_data['sub'].isin(PRE_REG_EXCLUSIONS_LIST)]\n",
     "\n",
     "main_data_df = main_data_df.reset_index(drop=True)\n",
     "CT_data = CT_data.reset_index(drop=True)\n",
     "gambles = gambles.reset_index(drop=True)\n",
-    "IPI_consistency_data_by_trial = IPI_consistency_data_by_trial.reset_index(drop=True)\n"
+    "IPI_consistency_data_by_trial = IPI_consistency_data_by_trial.reset_index(drop=True)\n",
+    "demographic_data = demographic_data.reset_index(drop=True)\n"
    ]
   },
   {
@@ -9710,6 +9706,226 @@
     "    borderpad=0.2,\n",
     "    handlelength=1.5\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demographics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "sub",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "66f65e5f-35eb-4938-a785-6cc4c288af23",
+       "rows": [
+        [
+         "count",
+         "193.0",
+         "193.0"
+        ],
+        [
+         "mean",
+         "2035.020725388601",
+         "32.512953367875646"
+        ],
+        [
+         "std",
+         "1003.3431458470333",
+         "9.994847009985818"
+        ],
+        [
+         "min",
+         "1001.0",
+         "18.0"
+        ],
+        [
+         "25%",
+         "1049.0",
+         "25.0"
+        ],
+        [
+         "50%",
+         "1099.0",
+         "31.0"
+        ],
+        [
+         "75%",
+         "3049.0",
+         "37.0"
+        ],
+        [
+         "max",
+         "3102.0",
+         "67.0"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>193.000000</td>\n",
+       "      <td>193.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2035.020725</td>\n",
+       "      <td>32.512953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1003.343146</td>\n",
+       "      <td>9.994847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1001.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1049.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1099.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3049.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3102.000000</td>\n",
+       "      <td>67.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sub         age\n",
+       "count   193.000000  193.000000\n",
+       "mean   2035.020725   32.512953\n",
+       "std    1003.343146    9.994847\n",
+       "min    1001.000000   18.000000\n",
+       "25%    1049.000000   25.000000\n",
+       "50%    1099.000000   31.000000\n",
+       "75%    3049.000000   37.000000\n",
+       "max    3102.000000   67.000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "gender",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "2cea0edb-8bb2-46ec-880e-01f46d2159aa",
+       "rows": [
+        [
+         "Male",
+         "146"
+        ],
+        [
+         "Female",
+         "44"
+        ],
+        [
+         "Non-binary",
+         "2"
+        ],
+        [
+         "Prefernottosay",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "gender\n",
+       "Male              146\n",
+       "Female             44\n",
+       "Non-binary          2\n",
+       "Prefernottosay      1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(demographic_data.describe())\n",
+    "display(demographic_data.gender.value_counts())"
    ]
   }
  ],
